--- a/pom.xml
+++ b/pom.xml
@@ -8,3 +8,8 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>maven-simple</name>
+    <properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
