--- a/pom.xml
+++ b/pom.xml
@@ -20,3 +20,10 @@
    <version>4.9</version>
    <scope>test</scope>
   </dependency>
+ <dependency>
+    <groupId>commons-collections</groupId>
+    <artifactId>commons-collections</artifactId>
+    <version>3.2.2</version>
+  </dependency>
+ </dependencies>
+
