--- a/module3/ant-task/build.xml
+++ b/module3/ant-task/build.xml
@@ -3,7 +3,7 @@
   <target name="init">
 
   <property name="src" location="src"/>
-  <property name="build" location="build"/>
+  <property name="build" location="/module3/ant-task"/>
   <property name="dist"  location="dist"/>
   <property name="lib"  location="lib"/>
   <property name="test"  location="test"/>
