--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,8 @@
           </manifest>
         </archive>
       </configuration>
-             <plugin>
+    </plugin>
+ <plugin>
 <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-deploy-plugin</artifactId>
 	<version>2.8.2</version>
