--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,45 @@
         </archive>
       </configuration>
     </plugin>
+	    			<plugin>
+				<groupId>org.wildfly.plugins</groupId>
+				<artifactId>wildfly-maven-plugin</artifactId>
+				<version>1.2.0.Beta1</version>
+				<configuration>
+					<hostname>${wildfly-hostname}</hostname>
+					<port>${wildfly-port}</port>
+					<username>admin</username>
+					<password>admin123</password>
+					<name>${wildfly-name}</name>
+				</configuration>
+			</plugin>	
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.8</version>
+				<executions>
+					<execution>
+						<id>default-deploy</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>deploy</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<serverId>MavenNesus</serverId>
+					<nexusUrl>http://10.19.10.4</nexusUrl>
+					<skipStaging>true</skipStaging>
+				</configuration>
+			</plugin>
     </plugins>
   </build>
 </project>
