--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,18 @@
     <version>3.2.2</version>
   </dependency>
  </dependencies>
- <distributionManagement>
-   <repository>
-	<id>MavenNexus</id>
-	<url>http://10.19.10.4/repository/MavenNexus/</url>
-	</repository>
-</distributionManagement>
+<distributionManagement>
+    <repository>
+      <id>nexus</id>
+      <name>Releases</name>
+      <url>http://localhost:8081/repository/maven-releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>nexus</id>
+      <name>Snapshot</name>
+      <url>http://localhost:8081/repository/maven-snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
   <build>
     <plugins>
       <plugin>
